# pcre2test

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/shixq/www/pcre2test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  phone_util.cpp  phone_util.h
app/src/main/cpp/pcre/: CMakeLists.txt
app/src/main/java/com/shixq/www/pcre2test/: MainActivity.java  PhoneUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/shixq/www/pcre2test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
